[gd_scene load_steps=5 format=3 uid="uid://devgu37ploipb"]

[ext_resource type="Theme" uid="uid://bv3cejaf47msf" path="res://monochrome_theme.tres" id="1_usxaq"]
[ext_resource type="FontFile" uid="uid://6oaa5h668nc7" path="res://assets/cp437_20x20_2.png" id="2_0g0fy"]
[ext_resource type="Script" path="res://scenes/puzzle_window.gd" id="2_hhxe8"]
[ext_resource type="FontFile" uid="uid://t8gejpctdf8a" path="res://assets/cp437_20x20_3.png" id="3_f3uie"]

[node name="PuzzleWindow" type="Window"]
title = "?????"
position = Vector2i(10, 365)
size = Vector2i(268, 143)
theme = ExtResource("1_usxaq")
script = ExtResource("2_hhxe8")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 4.0
offset_right = 264.0
offset_bottom = 139.0
alignment = 1

[node name="FinalQuestion" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_0g0fy")
text = "what is
the passcode?"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="FinalLabel" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_f3uie")
text = "honor"
horizontal_alignment = 1

[node name="FinalLineEdit" type="LineEdit" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_0g0fy")
placeholder_text = "?????"
alignment = 1
max_length = 5

[node name="FinalCheckButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_0g0fy")
text = "check"

[connection signal="mouse_entered" from="Control/VBoxContainer/FinalCheckButton" to="." method="_on_final_check_button_mouse_entered"]
[connection signal="pressed" from="Control/VBoxContainer/FinalCheckButton" to="." method="_on_final_check_button_pressed"]
